--- a/uni.css
+++ b/uni.css
@@ -1,46 +1,282 @@
-@import url(http://fonts.googleapis.com/css?family=Audiowide|Open+Sans|Raleway:300);
+/*
+Sources:
+Tech -
+  - Materialize
+  - Skrollr.js
+  - Rellax.js
+  - JQuery
+Research
+  - http://searchcio.techtarget.com/definition/AI
+  - https://hbr.org/cover-story/2017/07/the-business-of-artificial-intelligence
+  -
+
+*/
+
+
+/*=================== MAIN CSS ==============================*/
+
+@import url('https://fonts.googleapis.com/css?family=Share+Tech');
+@import url('http://fonts.googleapis.com/css?family=Audiowide|Open+Sans|Raleway:300');
 html, body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Share Tech', sans-serif;
+  /*font-family: 'Open Sans', sans-serif;*/
+  font-size: 16px;
   color: white;
   background: black;
+  height: 100%;
+  width: 100%;
 }
+
 nav {
   background: rgba(63, 124, 191, .5) !important;
 }
+
 footer {
   text-align: center;
   background-color: #2c3e50 !important;
   padding: 5vh 0 !important;
 }
+
 .AK {
-  font-family: "Audiowide",sans-serif;
+  font-family: "Audiowide", sans-serif;
   text-decoration: underline;
   color: #7A52CC;
 }
+
 .AK span {
   color: #FF0000;
 }
+
 .Hero {
-  background-image: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
-  url('https://futureoflife.org/wp-content/uploads/2015/11/artificial_intelligence_benefits_risk.jpg');
   background-size: cover;
   background-position: center;
   height: 80vh;
-  padding: 38vh 0;
   text-align: center;
   font-size: 32px;
+}
+
+
+/*Text*/
+
+.Text {
+  position: relative;
+  padding: 10px;
+  top: 40vh;
+  min-width: 0;
+  margin: 0 1vw;
+  background: white;
+  color: black;
+  border-radius: 1px;
+  box-shadow: 1px 1px 2px black;
+}
+
+.Text h1 {
+  font-size: 24px;
+  margin: 10px 0;
+}
+
+.w6 {
+  width: 48vw;
+}
+
+.off6 {
+  margin-left: 50vw;
+}
+
+@media only screen and (max-width: 760px) {
+  .Text {
+    top: 10vh;
+  }
+}
+.Title {
+  top: 20vh;
+}
+.Title h1{
+  font-size: 32px;
+}
+
+/*==============   HOME PAGE  ============== */
+
+.HomeHero {
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://futureoflife.org/wp-content/uploads/2015/11/artificial_intelligence_benefits_risk.jpg');
+  padding: 38vh 0;
+}
+.HomeNote {
+  width: 20vw;
+  margin: 0;
+  padding: 5px;
+  position: absolute;
+  bottom: 9vh;
+  background: #2c3e50;
+  border-radius: 3px;
+  font-size: 16px;
 }
 .Spacer {
   background: #3f7cbf;
   padding: 9vh 0;
   text-align: center;
 }
-.Text1 {
-  height: 100vh;
-  background-image: url('https://outoftheboxscience.com/wp-content/uploads/2017/04/Artificial-Intelligence.jpg');
+
+.TextBox {
   background-size: cover;
+  height: 100vh;
 }
-.Text1 .row {
+
+.Text1 {
+  background-image: url('https://outoftheboxscience.com/wp-content/uploads/2017/04/Artificial-Intelligence.jpg');
+}
+
+.Text2 {
+  background-image: url('http://cdn.washingtonexaminer.biz/cache/1060x600-2a681215b158ff0ad669323aae1836fe.jpg');
+}
+.Text3 {
+  background-image: url('http://i2.cdn.turner.com/money/dam/assets/160928120831-melinda-gates-artificial-intelligence-00010204-1024x576.jpg');
+}
+
+/*==============   ABOUT US PAGE  ============== */
+
+
+/*==============   USES PAGE  ============== */
+
+.UsesHero {
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://cdn.yourstory.com/wp-content/uploads/2015/05/Yourstory_AI.jpg');
+}
+
+
+/* full width/height container */
+
+#slides-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+
+/* double the height/width of a viewport */
+
+#slides {
+  width: 200%;
+  height: 200%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 50%;
+}
+
+
+/* Slide 2 goes to the bottom left */
+
+#slide-2 {
+  background: white no-repeat center center;
+  background-size: cover;
+  -webkit-transform: translate(0, 100%);
+  -ms-transform: translate(0, 100%);
+  transform: translate(0, 100%);
+}
+
+
+/* Slide 3 goes to the bottom right */
+
+#slide-3 {
+  background: blue no-repeat center center;
+  background-size: cover;
+  -webkit-transform: translate(100%, 100%);
+  -ms-transform: translate(100%, 100%);
+  transform: translate(100%, 100%);
+}
+
+
+/* Slide 4 goes to the top right */
+
+#slide-4 {
+  background: red no-repeat center center;
+  background-size: cover;
+  -webkit-transform: translate(100%, 0%);
+  -ms-transform: translate(100%, 0%);
+  transform: translate(100%, 0%);
+}
+
+#slide-2 #footBox {
   position: relative;
-  top: 40vh;
+  top: 100%;
+}
+
+.caption {
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
+  text-align: right;
+  color: #fff;
+}
+
+p, h1 {
+  margin: 0;
+}
+
+h1 {
+  margin-bottom: 0.2em;
+}
+
+p {
+  line-height: 1.333em;
+}
+
+#slide-3 .caption {
+  left: 5%;
+  right: auto;
+  color: #47373f;
+}
+
+#slide-4 .caption {
+  right: auto;
+  left: 5%;
+  top: 5%;
+  bottom: auto;
+  color: #47373f;
+}
+
+#helper {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 600%;
+  width: 0;
+}
+
+.marker {
+  height: 25%;
+  width: 100%;
+}
+
+.red {
+  background-color: red;
+}
+
+.green {
+  background-color: green;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.yellow {
+  background-color: yellow;
+}
+
+
+/*==============   TECH PAGE  ============== */
+
+
+/*==============   CONCERNS PAGE  ============== */
+
+.ConcHero {
+  background-image:
 }
