--- a/css/uni.css
+++ b/css/uni.css
@@ -1,46 +1,3 @@
-/*
-Sources:
-Tech -
-  - Materialize
-  - JQuery
-Research
-http://oceanexplorer.noaa.gov/technology/diving/scuba/scuba.html
-
-=============================
-Plan:
-
-Home - Address issue of ocean discovery, offer solution by describing the AquaBot
-
-About - What is the AquaBot, uses,
-
-Uses -
-Business
- - Ocean Discovery
-Recreational
- - Scuba diving
- - Public Swimming
-Benefits -
- - Research
- - Safety
-Tech -
-
-
-Concerns -
-
-Cost -
-
-
-
-
-
-
-
-
-
-
-*/
-
-
 /*=================== MAIN CSS ==============================*/
 
 @import url('//fonts.googleapis.com/css?family=Open+Sans');
@@ -62,30 +19,35 @@ h2 {
   margin: 10px 0;
 }
 img {
-  height: 100% !important;
+  height: 100%;
   width: 100% !important;
 }
 nav {
   background: #2c3e50 !important;
+  text-decoration: none !important;
 }
 .dropdown-content a{
   color: black !important;
+  text-decoration: none !important;
 }
 
 footer {
   text-align: center;
   background-color: #2c3e50 !important;
-  padding: 5vh 0 !important;
+  padding: 10vh 0 0 0 !important;
 }
 
 .AK {
   font-family: "Audiowide", sans-serif;
   text-decoration: underline;
-  color: #7A52CC;
+  color: #7A52CC !important;
 }
 
 .AK span {
-  color: #FF0000;
+  color: #FF0000 !important;
+}
+a:hover {
+  text-decoration: underline;
 }
 
 .Hero {
@@ -120,25 +82,8 @@ footer {
   background-size: cover;
   padding: 10vh 10vw;
 }
-.Content .Box {
-  z-index: 2;
-  box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-  padding: 20px;
-  margin: 10px 0;
-  background: #f5f5f5;
-}
-.Content p {
-  /* border: 1px solid blue; */
-  /* width: 35%; */
-}
-/* .Content .Box img {
-  width: 35%;
-  height: 50%;
-  position: relative;
-  right: 0;
-} */
-
-/*Text - Can be integrated with title*/
+.w6{width:45vw}
+.off6{margin-left:50vw}
 
 .Text {
   position: relative;
@@ -158,17 +103,122 @@ footer {
   margin: 10px 0;
 }
 
-.w6 {
-  width: 45vw;
-}
 
-.off6 {
-  margin-left: 50vw;
-}
 .card-image {
   height: 50vh;
   width: 40vw;
 }
+.uk-card {
+  height: 120vh !important;
+}
+.uk-card-media-top {
+  height: 80vh !important;
+}
+.modal {
+  height: 100vh !important;
+}
+
+/* Water Animation */
+
+.water-container {
+  position: relative;
+  bottom: 0px;
+  width: 100%;
+  height: 80px;
+  overflow: hidden;
+}
+
+.water-waves {
+  position: relative;
+  height: 100px;
+  overflow: hidden;
+}
+
+.water-waves svg {
+  position: absolute;
+}
+
+#water1 {
+  -webkit-animation: shake1 14s infinite;
+  -moz-animation: shake1 14s infinite;
+  animation: shake1 14s infinite;
+  opacity: 0.4;
+  margin-left: -2000px;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+#water2 {
+  -webkit-animation: shake2 19s infinite;
+  -moz-animation: shake2 19s infinite;
+  animation: shake2 19s infinite;
+  opacity: 0.3;
+  margin-left: -2000px;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+#water3 {
+  -webkit-animation: shake1 17s infinite;
+  -moz-animation: shake1 17s infinite;
+  animation: shake1 17s infinite;
+  opacity: 0.2;
+  margin-left: -2000px;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-timing-function: linear;
+  animation-timing-function: linear;
+}
+
+@keyframes shake1 {
+  0% {
+    transform: translateX(-0px);
+  }
+  50% {
+    transform: translateX(-500px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes shake2 {
+  0% {
+    transform: translateX(0px);
+  }
+  50% {
+    transform: translateX(1000px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+#turbine {
+    width: 70%;
+    height: auto;
+    position: absolute;
+    left: 0%;
+    top: 20px;
+    z-index: 99;
+}
+
+.turbine {
+    width: 100%;
+    height: auto;
+}
+
+
+
+.cd-section {
+  min-height: 100%;
+  position: relative;
+  padding: 2em 0;
+}
+
+
+/* Mobile Screens */
 @media only screen and (max-width: 760px) {
   .Text {
     top: 10vh;
@@ -190,14 +240,29 @@ footer {
   color: white;
 }
 
+/*============== Cost hero ==================*/
+.CostHero {
+  background-image: url('http://www.sciencemag.org/sites/default/files/styles/article_main_large/public/AI-special-ghp.jpg?itok=y6JAP5Co');
+  color: white;
+}
 
-/*==============   US PAGE  ============== */
+
+
+/*==============   ABOUT US PAGE  ============== */
 .UsHero {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5),
   rgba(0, 0, 0, 0.5)),
   url('http://files.cluster2.hgsitebuilder.com/hostgator42104/image/aboutus.jpg');
   color: white;
 }
+
+/*============  BENEFITS PAGE ==================*/
+
+
+.BeneHero {
+  background-image: url('https://cdnb.artstation.com/p/assets/images/images/003/358/467/large/jesslyn-giovanni-underwater-research-facility-portfolio.jpg?1472815367');
+}
+
 
 
 /*=============    CONC PAGE ===================*/
