--- a/css/uni.css
+++ b/css/uni.css
@@ -47,7 +47,7 @@ footer {
   color: #FF0000 !important;
 }
 a:hover {
-  text-decoration: underline;
+  text-decoration: none !important;
 }
 
 .Hero {
