--- a/css/uni.css
+++ b/css/uni.css
@@ -11,6 +11,7 @@ html, body {
   background: black;
   height: 100%;
   width: 100%;
+  /* overflow-x: hidden !important; */
 }
 
 h2 {
@@ -33,7 +34,7 @@ nav {
 
 footer {
   text-align: center;
-  background-color: #2c3e50 !important;
+  background-color: #253849 !important;
   padding: 10vh 0 0 0 !important;
 }
 
